[gd_scene load_steps=11 format=3 uid="uid://sv5v6od6e54a"]

[ext_resource type="Script" path="res://Singleton/Settings.gd" id="1_cedos"]
[ext_resource type="Resource" uid="uid://dhpmlxaildjo0" path="res://Resources/Boss.tres" id="2_2iva2"]
[ext_resource type="Script" path="res://Resources/DialogueSnippet.gd" id="3_xwud2"]
[ext_resource type="Script" path="res://Resources/Conversation.gd" id="4_5b88o"]

[sub_resource type="Resource" id="Resource_nc6k1"]
script = ExtResource("3_xwud2")
interlocutor = ExtResource("2_2iva2")
text = "Test1"
side = "PREFERED"

[sub_resource type="Resource" id="Resource_00tq4"]
script = ExtResource("4_5b88o")
dialogue_snippets = Array[ExtResource("3_xwud2")]([SubResource("Resource_nc6k1")])

[sub_resource type="Resource" id="Resource_ofui5"]
script = ExtResource("3_xwud2")
interlocutor = ExtResource("2_2iva2")
text = "Test2"
side = "PREFERED"

[sub_resource type="Resource" id="Resource_254ra"]
script = ExtResource("4_5b88o")
dialogue_snippets = Array[ExtResource("3_xwud2")]([SubResource("Resource_ofui5")])

[sub_resource type="Resource" id="Resource_6b5i5"]
script = ExtResource("3_xwud2")
interlocutor = ExtResource("2_2iva2")
text = "Test3"
side = "PREFERED"

[sub_resource type="Resource" id="Resource_fj6f7"]
script = ExtResource("4_5b88o")
dialogue_snippets = Array[ExtResource("3_xwud2")]([SubResource("Resource_6b5i5")])

[node name="Settings" type="Node"]
process_mode = 3
script = ExtResource("1_cedos")
list = Array[ExtResource("4_5b88o")]([SubResource("Resource_00tq4"), SubResource("Resource_254ra"), SubResource("Resource_fj6f7")])

[node name="UI" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuUI" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/PauseMenuUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 400

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenuUI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BTResume" type="Button" parent="UI/PauseMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BTSettings" type="Button" parent="UI/PauseMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="SettingsUI" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/SettingsUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="Panel" type="Panel" parent="UI/SettingsUI/MarginContainer"]
layout_mode = 2

[connection signal="visibility_changed" from="UI" to="." method="_on_ui_visibility_changed"]
[connection signal="visibility_changed" from="UI/PauseMenuUI" to="." method="_on_pause_menu_ui_visibility_changed"]
[connection signal="pressed" from="UI/PauseMenuUI/MarginContainer/VBoxContainer/BTResume" to="." method="_on_bt_resume_pressed"]
[connection signal="visibility_changed" from="UI/SettingsUI" to="." method="_on_settings_ui_visibility_changed"]
